WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119744
[Curl] Possible infinite loop while downloading.
https://bugs.webkit.org/show_bug.cgi?id=119744
Summary
[Curl] Possible infinite loop while downloading.
peavo
Reported
2013-08-13 06:51:14 PDT
If the methods addToCurl() or removeFromCurl() in the curl download manager fails (WebCore/platform/network/curl/CurlDownload.cpp), the download thread might get stuck in an endless loop, while trying to update the curl handle list (in the method updateHandleList()).
Attachments
Patch
(1.82 KB, patch)
2013-08-13 06:59 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2013-08-13 06:59:38 PDT
Created
attachment 208625
[details]
Patch
WebKit Commit Bot
Comment 2
2013-08-13 09:18:21 PDT
Comment on
attachment 208625
[details]
Patch Clearing flags on attachment: 208625 Committed
r154006
: <
http://trac.webkit.org/changeset/154006
>
WebKit Commit Bot
Comment 3
2013-08-13 09:18:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug