[Curl] Possible infinite loop while downloading. https://bugs.webkit.org/show_bug.cgi?id=119744

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-08-13
Reviewed by Darin Adler.

If adding/removing curl handles fails, the download thread
can end up in an endless loop trying to update the curl handle list.

* platform/network/curl/CurlDownload.cpp:
(WebCore::CurlDownloadManager::updateHandleList): Avoid infinite loop by ignoring return value.

Canonical link: https://commits.webkit.org/137695@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154006 268f45cc-cd09-0410-ab3c-d52691b4dbfc